--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,51 @@
-p {
-  color: red;
+@font-face {
+  font-family: "inter";
+  src: url("../src/fonts/Inter-Regular-2.woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
 }
+
+@font-face {
+  font-family: "inter-bold";
+  src: url("../src/fonts/Inter-Bold.woff2");
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+
+nav {
+  margin-top: 50px;
+}
+
+.nav-box {
+  padding: 24px 0;
+  font-family: "inter";
+  font-size: 16px;
+  display: flex;
+  gap: 32px;
+  justify-content: center;
+}
+
+h1 {
+  text-transform: uppercase;
+  font-family: "inter";
+  font-size: 16px;
+  margin-top: 123px;
+  text-align: center;
+}
+
+.title {
+  font-family: "inter-bold";
+  font-size: 72px;
+  text-align: center;
+  line-height: 65px;
+  margin-bottom: 30px;
+}
+
+.text {
+  font-family: "inter";
+  font-size: 24px;
+  text-align: center;
+}
+
