--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,13 @@
   font-style: normal;
   font-display: swap;
 }
+body {
+  background-color: #6971a2;
+}
+
+.about-me {
+  color: white;
+}
 
 nav {
   margin-top: 50px;
@@ -47,5 +54,22 @@ h1 {
   font-family: "inter";
   font-size: 24px;
   text-align: center;
+  margin-bottom: 30px;
 }
 
+button {
+  background-color: #4caf50; /* Green */
+  border: none;
+
+  color: white;
+  padding: 22px 60px;
+
+  text-align: center;
+  font-size: 18px;
+  font-family: "inter";
+  color: white;
+
+  margin: 0 auto;
+  display: block;
+  background-color: #6971a2;
+}
